--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,6 +9,7 @@
         <a href="/cornbasischart" target="_blank">玉米基差走势图</a>&nbsp;&nbsp;
         <a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a>&nbsp;&nbsp;
         <a href="/carryout" target="_blank">南北港库存与价格</a>&nbsp;&nbsp;
+        <a href="http://www.dce.com.cn/qiquanwang/pxjy/qqgj74/index.html" target="_blank">期权价格计算器</a>&nbsp;&nbsp;
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
@@ -37,8 +38,10 @@
     <p>
         <a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/rcjccpm/index.html" target="_blank">大商所持仓排名</a>&nbsp;&nbsp;
         <a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/cdrb/index.html" target="_blank">大商所仓单日报</a>&nbsp;&nbsp;
+        <a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/jgtj/jgsj/index.html" target="_blank">大商所交割数据</a>&nbsp;&nbsp;
         <a href="http://www.czce.com.cn/portal/jysj/qhjysj/ccpm/A09112003index_1.htm" target="_blank">郑商所持仓排名</a>&nbsp;&nbsp;
         <a href="http://www.czce.com.cn/portal/jysj/qhjysj/cdrb/A09112009index_1.htm" target="_blank">郑商所仓单日报</a>&nbsp;&nbsp;
+        <a href="http://www.czce.com.cn/cn/jysj/jgpd/H770308index_1.htm" target="_blank">郑商所交割配对</a>&nbsp;&nbsp;
         <a href="http://www.shfe.com.cn/statements/dataview.html?paramid=pm" target="_blank">上期所持仓排名</a>&nbsp;&nbsp;
         <a href="http://www.shfe.com.cn/statements/dataview.html?paramid=dailystock" target="_blank">上期所仓单日报</a>&nbsp;&nbsp;
     </p>
