--- a/app/templates/carryout.html
+++ b/app/templates/carryout.html
@@ -110,8 +110,8 @@
                     name: '北港库存',
                     yAxisIndex:0,
                     type: 'line',
-                    symbol:'none',
-                    symbolSize:0,
+                    // symbol:'none',
+                    // symbolSize:0,
                     itemStyle: {normal: {areaStyle: {type: 'default'}}},
                     // data: {{l4}}
                 },
@@ -255,8 +255,8 @@
                     name: '广东港口库存',
                     yAxisIndex:0,
                     type: 'line',
-                    symbol:'none',
-                    symbolSize:0,
+                    // symbol:'none',
+                    // symbolSize:0,
                     itemStyle: {normal: {areaStyle: {type: 'default'}}},
                     // data: {{l4}}
                 },
@@ -383,8 +383,8 @@
                     name: '广东港口库存/北港库存',
                     yAxisIndex:0,
                     type: 'line',
-                    symbol:'none',
-                    symbolSize:0,
+                    // symbol:'none',
+                    // symbolSize:0,
                     itemStyle: {normal: {areaStyle: {type: 'default'}}},
                     // data: {{l4}}
                 },
