--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -56,7 +56,7 @@
             //     
             // },
             legend: {
-                data:['2019', '2018', '2017', '2016', '2015', '2014'],
+                data:['2019', '2018', '2017', '2016', '2015'],
                 y:30
             },
             xAxis: {
@@ -85,7 +85,7 @@
             //     }
             // ],
             dataset:{
-                dimensions: ['date', '2019basis1', '2018basis1', '2017basis1', '2016basis1', '2015basis1', '2014basis1'],
+                dimensions: ['date', '2019basis1', '2018basis1', '2017basis1', '2016basis1', '2015basis1'],
                 source: my_corn_year_basis1_l
             },
             series: [
@@ -120,11 +120,6 @@
                     name: '2015',
                     type: 'line'
                     // data: {{l4s}}
-                },
-                {
-                    name: '2014',
-                    type: 'line'
-                    // data: {{l4}}
                 }
             ]
         };
@@ -188,7 +183,7 @@
             //     
             // },
             legend: {
-                data:['2019', '2018', '2017', '2016', '2015', '2014'],
+                data:['2019', '2018', '2017', '2016', '2015'],
                 y:30
             },
             xAxis: {
@@ -217,7 +212,7 @@
             //     }
             // ],
             dataset:{
-                dimensions: ['date', '2019basis5', '2018basis5', '2017basis5', '2016basis5', '2015basis5', '2014basis5'],
+                dimensions: ['date', '2019basis5', '2018basis5', '2017basis5', '2016basis5', '2015basis5'],
                 source: my_corn_year_basis5_l
             },
             series: [
@@ -248,11 +243,6 @@
                     name: '2015',
                     type: 'line'
                     // data: {{l4s}}
-                },
-                {
-                    name: '2014',
-                    type: 'line'
-                    // data: {{l4}}
                 }
             ]
         };
@@ -290,7 +280,7 @@
             //     
             // },
             legend: {
-                data:['2019', '2018', '2017', '2016', '2015', '2014'],
+                data:['2019', '2018', '2017', '2016', '2015'],
                 y:30
             },
             xAxis: {
@@ -319,7 +309,7 @@
             //     }
             // ],
             dataset:{
-                dimensions: ['date', '2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9', '2014basis9'],
+                dimensions: ['date', '2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9'],
                 source: my_corn_year_basis9_l
             },
             series: [
@@ -350,11 +340,6 @@
                     name: '2015',
                     type: 'line'
                     // data: {{l4s}}
-                },
-                {
-                    name: '2014',
-                    type: 'line'
-                    // data: {{l4}}
                 }
             ]
         };
