--- a/app/templates/priceSummarize.html
+++ b/app/templates/priceSummarize.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" type="text/css" href="../static/css/mystyle.css">
 </head>
 <body>
-    <font size="6" color="blue"><p>产区价格信息</p></font>
+    <font size="6" color="blue"><p align="center">产区价格信息</p></font>
     <div>
-        <table border="1" cellpadding="10">
+        <table border="1" cellpadding="10" align="center">
             {% for row in region_df.values %}
             <tr>
                 {% for cell in row %}
@@ -21,9 +21,9 @@
             {% endfor %}
         </table>
     </div>
-    <font size="6" color="blue"><p>深加工企业库存（天）</p></font>
+    <font size="6" color="blue"><p align="center">深加工企业库存（天）</p></font>
     <div>
-        <table border="1" cellpadding="10">
+        <table border="1" cellpadding="10" align="center">
             {% for row in deepcarryout_df.values %}
             <tr>
                 {% for cell in row %}
@@ -35,9 +35,9 @@
             {% endfor %}
         </table>
     </div>
-    <font size="6" color="blue"><p>饲料厂库存（天）</p></font>
+    <font size="6" color="blue"><p align="center">饲料厂库存（天）</p></font>
     <div>
-        <table border="1" cellpadding="10">
+        <table border="1" cellpadding="10" align="center">
             {% for row in feedcarryout_df.values %}
             <tr>
                 {% for cell in row %}
