--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,10 +5,11 @@
     <!-- ###################################################################################### -->
     <font color="red"><p><b>玉米市场资讯</b></p></font>
     <p>
-        <a href="/priceSummarize" target="_blank">信息概览</a>&nbsp;&nbsp;
+        <a href="/priceSummarize" target="_blank">产区价格与工厂库存</a>&nbsp;&nbsp;
+        <a href="/carryout" target="_blank">南北港库存与价格</a>&nbsp;&nbsp;
+        <a href="/deepprocessing" target="_blank">深加工开工率与利润</a>&nbsp;&nbsp;
         <a href="/cornbasischart" target="_blank">玉米基差走势图</a>&nbsp;&nbsp;
         <a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a>&nbsp;&nbsp;
-        <a href="/carryout" target="_blank">南北港库存与价格</a>&nbsp;&nbsp;
         <a href="http://www.dce.com.cn/qiquanwang/pxjy/qqgj74/index.html" target="_blank">期权价格计算器</a>&nbsp;&nbsp;
         <a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a>&nbsp;&nbsp;
     </p>
