--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Corn Basis 1-5-9</title>
+    <title>玉米基差 1-5-9</title>
     <!-- 引入 echarts.js -->
     <!-- <script src="js/echarts.js"></script> -->
     <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
