--- a/app/templates/cornspreadchart.html
+++ b/app/templates/cornspreadchart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Corn Futures Spread 1-5-9</title>
+    <title>玉米期货价差1-5-9</title>
     <!-- 引入 echarts.js -->
     <!-- <script src="js/echarts.js"></script> -->
     <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
