--- a/app/templates/portcarryout.html
+++ b/app/templates/portcarryout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>North&South Port Carryout</title>
+    <title>南北港库存替代品</title>
     <!-- 引入 echarts.js -->
     <!-- <script src="js/echarts.js"></script> -->
     <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
